--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "4d247a3f-3217-4d89-8dcf-ccaa137f1d33"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
